--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,9 +8,7 @@ trigger:
 
 pool:
   vmImage: ubuntu-latest
-variables:
-- name: token
-  value: ARMORCODE_SLA_TOKEN
+
 
 steps:
 - task: Bash@3
@@ -20,7 +18,7 @@ steps:
     i=0
         while [ $i -lt 30 ]
         do
-            curl --location --request POST 'https://qa.armorcode.ai/client/buildvalidation' --header 'Content-Type: application/json' --header 'Authorization: Bearer $(token)'  -d '{ "env": "Staging", "product": "3732", "subProduct": "8075", "buildTool":"AZURE_PIPELINE", "buildNumber": "$(Build.BuildId)"}' > result.json
+            curl --location --request POST 'https://qa.armorcode.ai/client/buildvalidation' --header 'Content-Type: application/json' --header 'Authorization: Bearer $(ARMORCODE_SLA_TOKEN)'  -d '{ "env": "Staging", "product": "3732", "subProduct": "8075", "buildTool":"AZURE_PIPELINE", "buildNumber": "$(Build.BuildId)"}' > result.json
             status=$(jq -r '.status' result.json)
             if [ $status = "HOLD" ]
             then
